# dialogue

./: .gitignore  CLAUDE.md  CONVENTIONS.md  I2S_ANALYSIS.md  README.md  i2s.c  i2s.h  i2s.pio  i2s_fixed.c  i2s_fixed.pio  i2s_simple.pio  i2s_test.c  upload  ws2812.c  ws2812.h  ws2812.pio
src/: CMakeLists.txt  audio.cpp  audio.h  audio_app.c  i2s_dac.c  i2s_dac.h  i2s_tx.pio  keyboard.h  main.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
